--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,28 @@
 .App {
   text-align: center;
+  width: 90%;
+  margin: 0 auto;
 }
 
+.title {
+  font-size: 8rem;
+  font-family: "Paytone One", sans-serif;
+  margin: 3rem 0 0 0;
+  color: white;
+}
+
+.address {
+  margin: 0;
+  font-size: 2rem;
+  font-family: "Be Vietnam", sans-serif;
+}
+
+.burrito-home {
+  width: 40%;
+  margin: 2rem 0 4rem 0;
+}
+
+/* ///Burrito/// */
 .burrito-container {
   position: relative;
   top: 300px;
@@ -16,4 +37,29 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* //Get Started */
+.start-button {
+  background: linear-gradient(to bottom, #bd6800 5%, #db7800 100%);
+  background-color: #bd6800;
+  border-color: #bd6800;
+  border-radius: 8px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 3rem;
+  font-weight: bold;
+  padding: 13px 32px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #f77e13;
+}
+.start-button:hover {
+  background: linear-gradient(to bottom, #db7800 5%, #bd6800 100%);
+  background-color: #db7800;
+}
+.start-button:active {
+  position: relative;
+  top: 1px;
 }
