--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  font-family: "Be Vietnam", sans-serif;
+  background-image: linear-gradient(
+    to right top,
+    #040404,
+    #0b0b0c,
+    #111112,
+    #161617,
+    #1a1a1b,
+    #1b1b1c,
+    #1b1c1d,
+    #1c1d1e,
+    #191b1c,
+    #171919,
+    #151617,
+    #121414
+  );
+  background-size: contain;
+  background-repeat: no-repeat;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  height: 100vh;
+  font-size: 16px;
 }
