--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-body {
+html {
+  min-height: 100%;
   margin: 0;
-  padding: 0;
-  font-family: "Be Vietnam", sans-serif;
+
   background-image: linear-gradient(
     to right top,
     #040404,
@@ -19,8 +19,17 @@ body {
   );
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Be Vietnam", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
+  min-height: 100%;
+  width: 100%;
   font-size: 16px;
+  color: white;
 }
